methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:3: error: reassignment to val
                                          {{avance(); nbPas = nbPas - 1;}}
                                                            ^MethodsArgs:4: error: reassignment to val
                                                            else {recule(); nbPas = nbPas - 1};}}
                                                                                  ^